fix: pipeline upgrade actions

--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -1,4 +1,7 @@
-name: Deploy MkDocs site to GitHub Pages
+# ======================= # 
+# === Camel Code Blog === # 
+# ======================= # 
+name: PipeLine 
 on:
   push:
     branches:
@@ -18,10 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.x"
       
@@ -34,10 +37,10 @@ jobs:
           mkdocs build
       
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./site
   
@@ -51,4 +54,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
