--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,10 +74,16 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
-  - pymdownx.superfences
+  - pymdownx.snippets
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
 # === custom css === #
 extra_css:
   - assets/stylesheets/extra.css
 # # === custom js === #
-# extra_javascript:
+extra_javascript:
+  - https://unpkg.com/mermaid/dist/mermaid.min.js
 #   - assets/javascripts/extra.js
